# Cevent

./: .gitignore  CMakeLists.txt  main.c
include/: Event.h  EventContext.h  EventDispatcher.h  EventHandler.h  EventHandlerHashMap.h  EventQueue.h
src/: EventDispatcher.c  EventHandlerHashMap.c  EventQueue.c
